feat: ✨ 1.18 port 🎉