@@ -1,27 +1,26 @@
 package xreliquary.items;
 
-import com.google.common.collect.ImmutableMap;
-import net.minecraft.enchantment.EnchantmentHelper;
-import net.minecraft.enchantment.Enchantments;
-import net.minecraft.entity.Entity;
-import net.minecraft.entity.LivingEntity;
-import net.minecraft.entity.item.ExperienceOrbEntity;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.Rarity;
-import net.minecraft.item.UseAction;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.util.ActionResult;
-import net.minecraft.util.ActionResultType;
-import net.minecraft.util.Hand;
-import net.minecraft.util.NonNullList;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.BlockRayTraceResult;
-import net.minecraft.util.math.RayTraceContext;
-import net.minecraft.util.math.RayTraceResult;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.TextFormatting;
-import net.minecraft.world.World;
+import net.minecraft.ChatFormatting;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.NonNullList;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.network.chat.Component;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.world.InteractionResult;
+import net.minecraft.world.InteractionResultHolder;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.ExperienceOrb;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Rarity;
+import net.minecraft.world.item.UseAnim;
+import net.minecraft.world.item.enchantment.EnchantmentHelper;
+import net.minecraft.world.item.enchantment.Enchantments;
+import net.minecraft.world.level.ClipContext;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.phys.BlockHitResult;
+import net.minecraft.world.phys.HitResult;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
 import net.minecraftforge.common.capabilities.ICapabilityProvider;
@@ -37,12 +36,13 @@ import xreliquary.util.XpHelper;
 
 import javax.annotation.Nullable;
 import java.util.List;
+import java.util.Map;
 
 public class HeroMedallionItem extends ToggleableItem implements IPedestalActionItem {
 	private static final String EXPERIENCE_TAG = "experience";
 
 	public HeroMedallionItem() {
-		super(new Properties().maxDamage(0).setNoRepair());
+		super(new Properties().durability(0).setNoRepair());
 	}
 
 	@Override
@@ -52,7 +52,7 @@ public class HeroMedallionItem extends ToggleableItem implements IPedestalAction
 
 	@Override
 	@OnlyIn(Dist.CLIENT)
-	public boolean hasEffect(ItemStack stack) {
+	public boolean isFoil(ItemStack stack) {
 		return NBTHelper.getBoolean("enabled", stack);
 	}
 
@@ -62,20 +62,20 @@ public class HeroMedallionItem extends ToggleableItem implements IPedestalAction
 	}
 
 	@Override
-	public UseAction getUseAction(ItemStack stack) {
-		return UseAction.BLOCK;
+	public UseAnim getUseAnimation(ItemStack stack) {
+		return UseAnim.BLOCK;
 	}
 
 	@Override
 	@OnlyIn(Dist.CLIENT)
-	protected void addMoreInformation(ItemStack medallion, @Nullable World world, List<ITextComponent> tooltip) {
+	protected void addMoreInformation(ItemStack medallion, @Nullable Level world, List<Component> tooltip) {
 		int experience = NBTHelper.getInt(EXPERIENCE_TAG, medallion);
 		int levels = XpHelper.getLevelForExperience(experience);
 		int remainingExperience = experience - XpHelper.getExperienceForLevel(levels);
 
-		LanguageHelper.formatTooltip(getTranslationKey() + ".tooltip2", ImmutableMap.of("levels", String.valueOf(levels), EXPERIENCE_TAG, String.valueOf(remainingExperience)), tooltip);
+		LanguageHelper.formatTooltip(getDescriptionId() + ".tooltip2", Map.of("levels", String.valueOf(levels), EXPERIENCE_TAG, String.valueOf(remainingExperience)), tooltip);
 		if (isEnabled(medallion)) {
-			LanguageHelper.formatTooltip("tooltip.absorb_active", ImmutableMap.of("item", TextFormatting.GREEN + "XP"), tooltip);
+			LanguageHelper.formatTooltip("tooltip.absorb_active", Map.of("item", ChatFormatting.GREEN + "XP"), tooltip);
 		}
 		LanguageHelper.formatTooltip("tooltip.absorb", null, tooltip);
 	}
@@ -94,20 +94,17 @@ public class HeroMedallionItem extends ToggleableItem implements IPedestalAction
 	}
 
 	@Override
-	public void inventoryTick(ItemStack stack, World world, Entity entity, int itemSlot, boolean isSelected) {
-		if (world.isRemote || !isEnabled(stack) || world.getGameTime() % 10 != 0) {
+	public void inventoryTick(ItemStack stack, Level world, Entity entity, int itemSlot, boolean isSelected) {
+		if (world.isClientSide || !isEnabled(stack) || world.getGameTime() % 10 != 0) {
 			return;
 		}
-		if (entity instanceof PlayerEntity) {
-			PlayerEntity player = (PlayerEntity) entity;
-			if (!player.isHandActive() || player.getActiveItemStack() != stack) {
-				drainExperienceLevels(stack, player, 1);
-			}
+		if (entity instanceof Player player && (!player.isUsingItem() || player.getUseItem() != stack)) {
+			drainExperienceLevels(stack, player, 1);
 		}
 	}
 
-	private void drainExperienceLevels(ItemStack stack, PlayerEntity player, int levelsToDrain) {
-		int experiencePoints = player.isCreative() ? 100 : player.experienceTotal - XpHelper.getExperienceForLevel(Math.max(getExperienceMinimum(), player.experienceLevel - levelsToDrain));
+	private void drainExperienceLevels(ItemStack stack, Player player, int levelsToDrain) {
+		int experiencePoints = player.isCreative() ? 100 : player.totalExperience - XpHelper.getExperienceForLevel(Math.max(getExperienceMinimum(), player.experienceLevel - levelsToDrain));
 		if (experiencePoints > 0) {
 			if (!player.isCreative()) {
 				decreasePlayerExperience(player, experiencePoints);
@@ -116,18 +113,18 @@ public class HeroMedallionItem extends ToggleableItem implements IPedestalAction
 		}
 	}
 
-	private void decreasePlayerExperience(PlayerEntity player, int pointsToRemove) {
-		player.experienceTotal -= pointsToRemove;
-		int newLevel = XpHelper.getLevelForExperience(player.experienceTotal);
+	private void decreasePlayerExperience(Player player, int pointsToRemove) {
+		player.totalExperience -= pointsToRemove;
+		int newLevel = XpHelper.getLevelForExperience(player.totalExperience);
 		player.experienceLevel = newLevel;
-		player.experience = (float) (player.experienceTotal - XpHelper.getExperienceForLevel(newLevel)) / player.xpBarCap();
+		player.experienceProgress = (float) (player.totalExperience - XpHelper.getExperienceForLevel(newLevel)) / player.getXpNeededForNextLevel();
 	}
 
 	private void decreaseMedallionExperience(ItemStack stack, int experience) {
 		setExperience(stack, getExperience(stack) - experience);
 	}
 
-	private void increasePlayerExperience(PlayerEntity player, int xpPoints) {
+	private void increasePlayerExperience(Player player, int xpPoints) {
 		player.giveExperiencePoints(xpPoints);
 	}
 
@@ -144,30 +141,28 @@ public class HeroMedallionItem extends ToggleableItem implements IPedestalAction
 	}
 
 	@Override
-	public ActionResult<ItemStack> onItemRightClick(World world, PlayerEntity player, Hand hand) {
-		ItemStack stack = player.getHeldItem(hand);
-		if (world.isRemote) {
-			return new ActionResult<>(ActionResultType.SUCCESS, stack);
+	public InteractionResultHolder<ItemStack> use(Level world, Player player, InteractionHand hand) {
+		ItemStack stack = player.getItemInHand(hand);
+		if (world.isClientSide) {
+			return new InteractionResultHolder<>(InteractionResult.SUCCESS, stack);
 		}
-		if (player.isSneaking()) {
-			return super.onItemRightClick(world, player, hand);
+		if (player.isShiftKeyDown()) {
+			return super.use(world, player, hand);
 		}
 
-		player.setActiveHand(hand);
+		player.startUsingItem(hand);
 
-		return new ActionResult<>(ActionResultType.SUCCESS, stack);
+		return new InteractionResultHolder<>(InteractionResult.SUCCESS, stack);
 	}
 
 	@Override
 	public void onUsingTick(ItemStack stack, LivingEntity entity, int count) {
 		int cooldown = count > 20 ? 10 : 20;
-		if (entity.world.isRemote || !(entity instanceof PlayerEntity) || entity.world.getGameTime() % cooldown != 0) {
+		if (entity.level.isClientSide || !(entity instanceof Player player) || entity.level.getGameTime() % cooldown != 0) {
 			return;
 		}
 
-		PlayerEntity player = (PlayerEntity) entity;
-
-		World world = player.world;
+		Level world = player.level;
 		if (isEnabled(stack)) {
 			drainExperienceLevels(stack, player, 10);
 			return;
@@ -175,15 +170,15 @@ public class HeroMedallionItem extends ToggleableItem implements IPedestalAction
 		increaseExperience(stack, player, world, 10);
 	}
 
-	private void increaseExperience(ItemStack stack, PlayerEntity player, World world, int levels) {
-		BlockRayTraceResult rayTraceResult = rayTrace(world, player, RayTraceContext.FluidMode.ANY);
+	private void increaseExperience(ItemStack stack, Player player, Level world, int levels) {
+		BlockHitResult rayTraceResult = getPlayerPOVHitResult(world, player, ClipContext.Fluid.ANY);
 
-		if (rayTraceResult.getType() == RayTraceResult.Type.BLOCK) {
-			BlockPos hitPos = rayTraceResult.getPos().add(rayTraceResult.getFace().getDirectionVec());
+		if (rayTraceResult.getType() == HitResult.Type.BLOCK) {
+			BlockPos hitPos = rayTraceResult.getBlockPos().offset(rayTraceResult.getDirection().getNormal());
 			spawnXpOnGround(stack, world, hitPos);
 		} else if (player.experienceLevel < getExperienceMaximum()) {
-			levels += Math.round(player.experience);
-			int maxPoints = XpHelper.getExperienceForLevel(player.experienceLevel + levels) - player.experienceTotal;
+			levels += Math.round(player.experienceProgress);
+			int maxPoints = XpHelper.getExperienceForLevel(player.experienceLevel + levels) - player.totalExperience;
 			int pointsToAdd = player.isCreative() ? maxPoints : Math.min(maxPoints, getExperience(stack));
 			increasePlayerExperience(player, pointsToAdd);
 			if (!player.isCreative()) {
@@ -193,48 +188,46 @@ public class HeroMedallionItem extends ToggleableItem implements IPedestalAction
 	}
 
 	@Override
-	public void onPlayerStoppedUsing(ItemStack stack, World worldIn, LivingEntity entityLiving, int timeLeft) {
-		if (entityLiving.world.isRemote || isEnabled(stack) || !(entityLiving instanceof PlayerEntity) || getUseDuration(stack) - timeLeft > 10) {
+	public void releaseUsing(ItemStack stack, Level worldIn, LivingEntity entityLiving, int timeLeft) {
+		if (entityLiving.level.isClientSide || isEnabled(stack) || !(entityLiving instanceof Player) || getUseDuration(stack) - timeLeft > 10) {
 			return;
 		}
 
-		increaseExperience(stack, (PlayerEntity) entityLiving, entityLiving.world, 1);
+		increaseExperience(stack, (Player) entityLiving, entityLiving.level, 1);
 	}
 
-	private void spawnXpOnGround(ItemStack stack, World world, BlockPos hitPos) {
+	private void spawnXpOnGround(ItemStack stack, Level world, BlockPos hitPos) {
 		int xp = Math.min(Settings.COMMON.items.heroMedallion.experienceDrop.get(), getExperience(stack));
 
 		if (getExperience(stack) >= xp) {
 			decreaseMedallionExperience(stack, xp);
 
 			while (xp > 0) {
-				int j = ExperienceOrbEntity.getXPSplit(xp);
+				int j = ExperienceOrb.getExperienceValue(xp);
 				xp -= j;
-				world.addEntity(new ExperienceOrbEntity(world, hitPos.getX(), hitPos.getY(), hitPos.getZ(), j));
+				world.addFreshEntity(new ExperienceOrb(world, hitPos.getX(), hitPos.getY(), hitPos.getZ(), j));
 			}
 		}
 	}
 
 	@Override
-	public ICapabilityProvider initCapabilities(ItemStack stack, @Nullable CompoundNBT nbt) {
+	public ICapabilityProvider initCapabilities(ItemStack stack, @Nullable CompoundTag nbt) {
 		return new FluidHandlerHeroMedallion(stack);
 	}
 
 	@Override
-	public void update(ItemStack stack, IPedestal pedestal) {
-		List<BlockPos> posInRange = pedestal.getPedestalsInRange(Settings.COMMON.items.heroMedallion.pedestalRange.get());
-		World world = pedestal.getTheWorld();
-
+	public void update(ItemStack stack, Level level, IPedestal pedestal) {
+		List<BlockPos> posInRange = pedestal.getPedestalsInRange(level, Settings.COMMON.items.heroMedallion.pedestalRange.get());
 		for (BlockPos pedestalPos : posInRange) {
-			InventoryHelper.getInventoryAtPos(world, pedestalPos).ifPresent(pedestalInventory -> {
+			InventoryHelper.getInventoryAtPos(level, pedestalPos).ifPresent(pedestalInventory -> {
 				List<ItemStack> toRepair = getMendingItemsForRepair(pedestalInventory);
 
 				for (ItemStack itemToRepair : toRepair) {
 					int xpToRepair = Math.min(Settings.COMMON.items.heroMedallion.pedestalRepairStepXP.get(), getExperience(stack));
-					int durabilityToRepair = Math.min(XpHelper.xpToDurability(xpToRepair), itemToRepair.getDamage());
+					int durabilityToRepair = Math.min(XpHelper.xpToDurability(xpToRepair), itemToRepair.getDamageValue());
 
 					setExperience(stack, getExperience(stack) - XpHelper.durabilityToXp(durabilityToRepair));
-					itemToRepair.setDamage(itemToRepair.getDamage() - durabilityToRepair);
+					itemToRepair.setDamageValue(itemToRepair.getDamageValue() - durabilityToRepair);
 				}
 			});
 		}
@@ -248,7 +241,7 @@ public class HeroMedallionItem extends ToggleableItem implements IPedestalAction
 			ItemStack stack = inventory.getStackInSlot(slot);
 
 			//only getting items that are more than 1 damaged to not waste xp
-			if (stack.isDamaged() && stack.getDamage() > 1 && EnchantmentHelper.getEnchantmentLevel(Enchantments.MENDING, stack) > 0) {
+			if (stack.isDamaged() && stack.getDamageValue() > 1 && EnchantmentHelper.getItemEnchantmentLevel(Enchantments.MENDING, stack) > 0) {
 				stacksToReturn.add(stack);
 			}
 		}
@@ -257,12 +250,12 @@ public class HeroMedallionItem extends ToggleableItem implements IPedestalAction
 	}
 
 	@Override
-	public void onRemoved(ItemStack stack, IPedestal pedestal) {
+	public void onRemoved(ItemStack stack, Level level, IPedestal pedestal) {
 		//nothing needed
 	}
 
 	@Override
-	public void stop(ItemStack stack, IPedestal pedestal) {
+	public void stop(ItemStack stack, Level level, IPedestal pedestal) {
 		//nothing needed
 	}
 }
