@@ -1,25 +1,24 @@
 package xreliquary.items;
 
-import com.google.common.collect.ImmutableMap;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.Blocks;
-import net.minecraft.block.FlowingFluidBlock;
-import net.minecraft.block.material.Material;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.fluid.Fluids;
-import net.minecraft.item.ItemStack;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.util.ActionResult;
-import net.minecraft.util.ActionResultType;
-import net.minecraft.util.DamageSource;
-import net.minecraft.util.Direction;
-import net.minecraft.util.Hand;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.BlockRayTraceResult;
-import net.minecraft.util.math.RayTraceContext;
-import net.minecraft.util.math.RayTraceResult;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.world.World;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.network.chat.Component;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.world.InteractionResult;
+import net.minecraft.world.InteractionResultHolder;
+import net.minecraft.world.damagesource.DamageSource;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.level.ClipContext;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.LiquidBlock;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.material.Fluids;
+import net.minecraft.world.level.material.Material;
+import net.minecraft.world.phys.BlockHitResult;
+import net.minecraft.world.phys.HitResult;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
 import net.minecraftforge.common.capabilities.ICapabilityProvider;
@@ -42,22 +41,23 @@ import xreliquary.util.NBTHelper;
 
 import javax.annotation.Nullable;
 import java.util.List;
+import java.util.Map;
 
 public class InfernalChaliceItem extends ToggleableItem {
 	public InfernalChaliceItem() {
-		super(new Properties().maxStackSize(1).setNoRepair());
+		super(new Properties().stacksTo(1).setNoRepair());
 
 		CommonEventHandler.registerPlayerHurtHandler(new IPlayerHurtHandler() {
 			@Override
-			public boolean canApply(PlayerEntity player, LivingAttackEvent event) {
+			public boolean canApply(Player player, LivingAttackEvent event) {
 				return (event.getSource() == DamageSource.LAVA || event.getSource() == DamageSource.ON_FIRE || event.getSource() == DamageSource.IN_FIRE)
-						&& player.getFoodStats().getFoodLevel() > 0
+						&& player.getFoodData().getFoodLevel() > 0
 						&& InventoryHelper.playerHasItem(player, ModItems.INFERNAL_CHALICE.get());
 			}
 
 			@Override
-			public boolean apply(PlayerEntity player, LivingAttackEvent event) {
-				player.addExhaustion(event.getAmount() * ((float) Settings.COMMON.items.infernalChalice.hungerCostPercent.get() / 100F));
+			public boolean apply(Player player, LivingAttackEvent event) {
+				player.causeFoodExhaustion(event.getAmount() * ((float) Settings.COMMON.items.infernalChalice.hungerCostPercent.get() / 100F));
 				return true;
 			}
 
@@ -70,9 +70,9 @@ public class InfernalChaliceItem extends ToggleableItem {
 
 	@Override
 	@OnlyIn(Dist.CLIENT)
-	protected void addMoreInformation(ItemStack chalice, @Nullable World world, List<ITextComponent> tooltip) {
-		LanguageHelper.formatTooltip(getTranslationKey() + ".tooltip2",
-				ImmutableMap.of("amount", String.valueOf(NBTHelper.getInt("fluidStacks", chalice))), tooltip);
+	protected void addMoreInformation(ItemStack chalice, @Nullable Level world, List<Component> tooltip) {
+		LanguageHelper.formatTooltip(getDescriptionId() + ".tooltip2",
+				Map.of("amount", String.valueOf(NBTHelper.getInt("fluidStacks", chalice))), tooltip);
 
 		if (isEnabled(chalice)) {
 			LanguageHelper.formatTooltip("tooltip.place", tooltip);
@@ -87,69 +87,69 @@ public class InfernalChaliceItem extends ToggleableItem {
 	}
 
 	@Override
-	public ActionResult<ItemStack> onItemRightClick(World world, PlayerEntity player, Hand hand) {
-		ItemStack stack = player.getHeldItem(hand);
-		if (player.isSneaking()) {
-			return super.onItemRightClick(world, player, hand);
+	public InteractionResultHolder<ItemStack> use(Level world, Player player, InteractionHand hand) {
+		ItemStack stack = player.getItemInHand(hand);
+		if (player.isShiftKeyDown()) {
+			return super.use(world, player, hand);
 		}
 
-		BlockRayTraceResult result = rayTrace(world, player, isEnabled(stack) ? RayTraceContext.FluidMode.SOURCE_ONLY : RayTraceContext.FluidMode.NONE);
+		BlockHitResult result = getPlayerPOVHitResult(world, player, isEnabled(stack) ? ClipContext.Fluid.SOURCE_ONLY : ClipContext.Fluid.NONE);
 
-		if (result.getType() != RayTraceResult.Type.BLOCK) {
-			return new ActionResult<>(ActionResultType.PASS, stack);
+		if (result.getType() != HitResult.Type.BLOCK) {
+			return new InteractionResultHolder<>(InteractionResult.PASS, stack);
 		} else {
-			BlockPos pos = result.getPos();
-			if (!world.isBlockModifiable(player, pos)) {
-				return new ActionResult<>(ActionResultType.PASS, stack);
+			BlockPos pos = result.getBlockPos();
+			if (!world.mayInteract(player, pos)) {
+				return new InteractionResultHolder<>(InteractionResult.PASS, stack);
 			}
 
-			Direction face = result.getFace();
-			if (!player.canPlayerEdit(pos, face, stack)) {
-				return new ActionResult<>(ActionResultType.PASS, stack);
+			Direction face = result.getDirection();
+			if (!player.mayUseItemAt(pos, face, stack)) {
+				return new InteractionResultHolder<>(InteractionResult.PASS, stack);
 			}
 
-			return getFluidHandler(stack).map(fluidHandler -> interactWithFluidHandler(world, player, stack, pos, face, fluidHandler)).orElse(new ActionResult<>(ActionResultType.FAIL, stack));
+			return getFluidHandler(stack).map(fluidHandler -> interactWithFluidHandler(world, player, stack, pos, face, fluidHandler)).orElse(new InteractionResultHolder<>(InteractionResult.FAIL, stack));
 		}
 	}
 
-	private ActionResult<ItemStack> interactWithFluidHandler(World world, PlayerEntity player, ItemStack stack, BlockPos pos, Direction face, IFluidHandlerItem fluidHandler) {
+	private InteractionResultHolder<ItemStack> interactWithFluidHandler(Level world, Player player, ItemStack stack, BlockPos pos, Direction face, IFluidHandlerItem fluidHandler) {
 		BlockState blockState = world.getBlockState(pos);
 		if (isEnabled(stack)) {
-			if (blockState.getBlock() == Blocks.LAVA && blockState.get(FlowingFluidBlock.LEVEL) == 0 && fluidHandler.fill(new FluidStack(Fluids.LAVA, FluidAttributes.BUCKET_VOLUME), IFluidHandler.FluidAction.SIMULATE) == FluidAttributes.BUCKET_VOLUME) {
-				world.setBlockState(pos, Blocks.AIR.getDefaultState());
+			if (blockState.getBlock() == Blocks.LAVA && blockState.getValue(LiquidBlock.LEVEL) == 0 && fluidHandler.fill(new FluidStack(Fluids.LAVA, FluidAttributes.BUCKET_VOLUME), IFluidHandler.FluidAction.SIMULATE) == FluidAttributes.BUCKET_VOLUME) {
+				world.setBlockAndUpdate(pos, Blocks.AIR.defaultBlockState());
 				fluidHandler.fill(new FluidStack(Fluids.LAVA, FluidAttributes.BUCKET_VOLUME), IFluidHandler.FluidAction.EXECUTE);
-				return new ActionResult<>(ActionResultType.SUCCESS, stack);
+				return new InteractionResultHolder<>(InteractionResult.SUCCESS, stack);
 			}
 		} else {
 			FluidStack fluidDrained = fluidHandler.drain(new FluidStack(Fluids.LAVA, FluidAttributes.BUCKET_VOLUME), IFluidHandler.FluidAction.SIMULATE);
 			if (player.isCreative() || fluidDrained.getAmount() == FluidAttributes.BUCKET_VOLUME) {
-				BlockPos adjustedPos = pos.offset(face);
+				BlockPos adjustedPos = pos.relative(face);
 				if (tryPlaceContainedLiquid(world, adjustedPos) && !player.isCreative()) {
 					fluidHandler.drain(new FluidStack(Fluids.LAVA, FluidAttributes.BUCKET_VOLUME), IFluidHandler.FluidAction.EXECUTE);
-					return new ActionResult<>(ActionResultType.SUCCESS, stack);
+					return new InteractionResultHolder<>(InteractionResult.SUCCESS, stack);
 				}
 			}
 		}
-		return new ActionResult<>(ActionResultType.PASS, stack);
+		return new InteractionResultHolder<>(InteractionResult.PASS, stack);
 	}
 
 	private LazyOptional<IFluidHandlerItem> getFluidHandler(ItemStack stack) {
 		return stack.getCapability(CapabilityFluidHandler.FLUID_HANDLER_ITEM_CAPABILITY, null);
 	}
 
-	private boolean tryPlaceContainedLiquid(World world, BlockPos pos) {
+	private boolean tryPlaceContainedLiquid(Level world, BlockPos pos) {
 		BlockState blockState = world.getBlockState(pos);
 		Material material = blockState.getMaterial();
-		if (!world.isAirBlock(pos) && material.isSolid()) {
+		if (!world.isEmptyBlock(pos) && material.isSolid()) {
 			return false;
 		} else {
-			world.setBlockState(pos, Blocks.LAVA.getDefaultState(), 3);
+			world.setBlock(pos, Blocks.LAVA.defaultBlockState(), 3);
 			return true;
 		}
 	}
 
 	@Override
-	public ICapabilityProvider initCapabilities(ItemStack stack, @Nullable CompoundNBT nbt) {
+	public ICapabilityProvider initCapabilities(ItemStack stack, @Nullable CompoundTag nbt) {
 		return new FluidHandlerInfernalChalice(stack);
 	}
 }
