@@ -1,35 +1,34 @@
 package xreliquary.items;
 
-import com.google.common.collect.ImmutableMap;
-import net.minecraft.block.Block;
-import net.minecraft.block.Blocks;
-import net.minecraft.entity.Entity;
-import net.minecraft.entity.LivingEntity;
-import net.minecraft.entity.MobEntity;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.entity.projectile.FireballEntity;
-import net.minecraft.entity.projectile.SmallFireballEntity;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.ItemUseContext;
-import net.minecraft.item.Items;
-import net.minecraft.item.UseAction;
-import net.minecraft.particles.ParticleTypes;
-import net.minecraft.particles.RedstoneParticleData;
-import net.minecraft.util.ActionResult;
-import net.minecraft.util.ActionResultType;
-import net.minecraft.util.DamageSource;
-import net.minecraft.util.Direction;
-import net.minecraft.util.Hand;
-import net.minecraft.util.SoundCategory;
-import net.minecraft.util.SoundEvents;
-import net.minecraft.util.math.AxisAlignedBB;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.BlockRayTraceResult;
-import net.minecraft.util.math.RayTraceResult;
-import net.minecraft.util.math.vector.Vector3d;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.TextFormatting;
-import net.minecraft.world.World;
+import net.minecraft.ChatFormatting;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.core.particles.DustParticleOptions;
+import net.minecraft.core.particles.ParticleTypes;
+import net.minecraft.network.chat.Component;
+import net.minecraft.sounds.SoundEvents;
+import net.minecraft.sounds.SoundSource;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.world.InteractionResult;
+import net.minecraft.world.InteractionResultHolder;
+import net.minecraft.world.damagesource.DamageSource;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.Mob;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.entity.projectile.LargeFireball;
+import net.minecraft.world.entity.projectile.SmallFireball;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
+import net.minecraft.world.item.UseAnim;
+import net.minecraft.world.item.context.UseOnContext;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.phys.AABB;
+import net.minecraft.world.phys.BlockHitResult;
+import net.minecraft.world.phys.HitResult;
+import net.minecraft.world.phys.Vec3;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
 import xreliquary.items.util.ILeftClickableItem;
@@ -41,6 +40,7 @@ import xreliquary.util.RegistryHelper;
 
 import javax.annotation.Nullable;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 
 public class PyromancerStaffItem extends ToggleableItem implements ILeftClickableItem {
@@ -52,16 +52,15 @@ public class PyromancerStaffItem extends ToggleableItem implements ILeftClickabl
 	private static final int INVENTORY_SEARCH_COOLDOWN = EFFECT_COOLDOWN * 5;
 
 	public PyromancerStaffItem() {
-		super(new Properties().maxStackSize(1));
+		super(new Properties().stacksTo(1));
 	}
 
 	@Override
-	public void inventoryTick(ItemStack stack, World world, Entity e, int i, boolean f) {
-		if (!(e instanceof PlayerEntity) || world.getGameTime() % EFFECT_COOLDOWN != 0) {
+	public void inventoryTick(ItemStack stack, Level world, Entity e, int i, boolean f) {
+		if (!(e instanceof Player player) || world.getGameTime() % EFFECT_COOLDOWN != 0) {
 			return;
 		}
 
-		PlayerEntity player = (PlayerEntity) e;
 		doFireballAbsorbEffect(stack, player);
 
 		if (!isEnabled(stack)) {
@@ -73,7 +72,7 @@ public class PyromancerStaffItem extends ToggleableItem implements ILeftClickabl
 
 	@Override
 	@OnlyIn(Dist.CLIENT)
-	protected void addMoreInformation(ItemStack staff, @Nullable World world, List<ITextComponent> tooltip) {
+	protected void addMoreInformation(ItemStack staff, @Nullable Level world, List<Component> tooltip) {
 		AtomicInteger charges = new AtomicInteger(0);
 		AtomicInteger blaze = new AtomicInteger(0);
 		iterateItems(staff, tag -> {
@@ -86,12 +85,12 @@ public class PyromancerStaffItem extends ToggleableItem implements ILeftClickabl
 				charges.set(quantity);
 			}
 		}, () -> false);
-		LanguageHelper.formatTooltip(getTranslationKey() + ".tooltip2", ImmutableMap.of("charges",
+		LanguageHelper.formatTooltip(getDescriptionId() + ".tooltip2", Map.of("charges",
 				Integer.toString(charges.get()), BLAZE_CHARGES_TAG, Integer.toString(blaze.get())), tooltip);
 		if (isEnabled(staff)) {
 			LanguageHelper.formatTooltip("tooltip.absorb_active",
-					ImmutableMap.of("item", TextFormatting.RED + Items.BLAZE_POWDER.getDisplayName(new ItemStack(Items.BLAZE_POWDER)).getString()
-							+ TextFormatting.WHITE + " & " + TextFormatting.RED + Items.FIRE_CHARGE.getDisplayName(new ItemStack(Items.FIRE_CHARGE)).getString()), tooltip);
+					Map.of("item", ChatFormatting.RED + Items.BLAZE_POWDER.getName(new ItemStack(Items.BLAZE_POWDER)).getString()
+							+ ChatFormatting.WHITE + " & " + ChatFormatting.RED + Items.FIRE_CHARGE.getName(new ItemStack(Items.FIRE_CHARGE)).getString()), tooltip);
 		}
 
 		LanguageHelper.formatTooltip("tooltip.absorb", null, tooltip);
@@ -108,8 +107,8 @@ public class PyromancerStaffItem extends ToggleableItem implements ILeftClickabl
 	}
 
 	@Override
-	public UseAction getUseAction(ItemStack stack) {
-		return UseAction.BLOCK;
+	public UseAnim getUseAnimation(ItemStack stack) {
+		return UseAnim.BLOCK;
 	}
 
 	public String getMode(ItemStack stack) {
@@ -136,169 +135,169 @@ public class PyromancerStaffItem extends ToggleableItem implements ILeftClickabl
 	}
 
 	@Override
-	public ActionResultType onLeftClickItem(ItemStack stack, LivingEntity entityLiving) {
-		if (!entityLiving.isSneaking()) {
-			return ActionResultType.CONSUME;
+	public InteractionResult onLeftClickItem(ItemStack stack, LivingEntity entityLiving) {
+		if (!entityLiving.isShiftKeyDown()) {
+			return InteractionResult.CONSUME;
 		}
-		if (entityLiving.world.isRemote) {
-			return ActionResultType.PASS;
+		if (entityLiving.level.isClientSide) {
+			return InteractionResult.PASS;
 		}
 		cycleMode(stack);
-		return ActionResultType.SUCCESS;
+		return InteractionResult.SUCCESS;
 	}
 
 	@Override
-	public ActionResult<ItemStack> onItemRightClick(World world, PlayerEntity player, Hand hand) {
-		ItemStack stack = player.getHeldItem(hand);
-		if (player.isSneaking()) {
-			super.onItemRightClick(world, player, hand);
+	public InteractionResultHolder<ItemStack> use(Level world, Player player, InteractionHand hand) {
+		ItemStack stack = player.getItemInHand(hand);
+		if (player.isShiftKeyDown()) {
+			super.use(world, player, hand);
 		} else {
 			if (getMode(stack).equals(BLAZE_MODE)) {
-				if (player.isSwingInProgress) {
-					return new ActionResult<>(ActionResultType.PASS, stack);
+				if (player.swinging) {
+					return new InteractionResultHolder<>(InteractionResult.PASS, stack);
 				}
-				player.swingArm(hand);
+				player.swing(hand);
 				shootBlazeFireball(player, stack);
 			} else if (getMode(stack).equals(CHARGE_MODE)) {
-				if (player.isSwingInProgress) {
-					return new ActionResult<>(ActionResultType.PASS, stack);
+				if (player.swinging) {
+					return new InteractionResultHolder<>(InteractionResult.PASS, stack);
 				}
-				player.swingArm(hand);
-				Vector3d lookVec = player.getLookVec();
+				player.swing(hand);
+				Vec3 lookVec = player.getLookAngle();
 				shootGhastFireball(player, stack, lookVec);
 			} else {
-				player.setActiveHand(hand);
+				player.startUsingItem(hand);
 			}
 		}
-		return new ActionResult<>(ActionResultType.SUCCESS, stack);
+		return new InteractionResultHolder<>(InteractionResult.SUCCESS, stack);
 	}
 
-	private void shootGhastFireball(PlayerEntity player, ItemStack stack, Vector3d lookVec) {
-		if (removeItemFromInternalStorage(stack, Items.FIRE_CHARGE, getFireChargeCost(), player.world.isRemote, player)) {
-			player.world.playEvent(player, 1016, player.getPosition(), 0);
-			FireballEntity fireball = new FireballEntity(player.world, player, lookVec.x, lookVec.y, lookVec.z);
-			fireball.accelerationX = lookVec.x / 3;
-			fireball.accelerationY = lookVec.y / 3;
-			fireball.accelerationZ = lookVec.z / 3;
-			fireball.setPosition(fireball.getPosX() + lookVec.x, player.getPosY() + player.getEyeHeight(), fireball.getPosZ() + lookVec.z);
-			player.world.addEntity(fireball);
+	private void shootGhastFireball(Player player, ItemStack stack, Vec3 lookVec) {
+		if (removeItemFromInternalStorage(stack, Items.FIRE_CHARGE, getFireChargeCost(), player.level.isClientSide, player)) {
+			player.level.levelEvent(player, 1016, player.blockPosition(), 0);
+			LargeFireball fireball = new LargeFireball(player.level, player, lookVec.x, lookVec.y, lookVec.z, 1);
+			fireball.xPower = lookVec.x / 3;
+			fireball.yPower = lookVec.y / 3;
+			fireball.zPower = lookVec.z / 3;
+			fireball.setPos(fireball.getX() + lookVec.x, player.getY() + player.getEyeHeight(), fireball.getZ() + lookVec.z);
+			player.level.addFreshEntity(fireball);
 
 		}
 	}
 
-	private void shootBlazeFireball(PlayerEntity player, ItemStack stack) {
-		Vector3d lookVec = player.getLookVec();
+	private void shootBlazeFireball(Player player, ItemStack stack) {
+		Vec3 lookVec = player.getLookAngle();
 		//blaze fireball!
-		if (removeItemFromInternalStorage(stack, Items.BLAZE_POWDER, getBlazePowderCost(), player.world.isRemote, player)) {
-			player.world.playEvent(player, 1018, player.getPosition(), 0);
-			SmallFireballEntity fireball = new SmallFireballEntity(player.world, player, lookVec.x, lookVec.y, lookVec.z);
-			fireball.accelerationX = lookVec.x / 3;
-			fireball.accelerationY = lookVec.y / 3;
-			fireball.accelerationZ = lookVec.z / 3;
-			fireball.setPosition(fireball.getPosX() + lookVec.x, player.getPosY() + player.getEyeHeight(), fireball.getPosZ() + lookVec.z);
-			player.world.addEntity(fireball);
+		if (removeItemFromInternalStorage(stack, Items.BLAZE_POWDER, getBlazePowderCost(), player.level.isClientSide, player)) {
+			player.level.levelEvent(player, 1018, player.blockPosition(), 0);
+			SmallFireball fireball = new SmallFireball(player.level, player, lookVec.x, lookVec.y, lookVec.z);
+			fireball.xPower = lookVec.x / 3;
+			fireball.yPower = lookVec.y / 3;
+			fireball.zPower = lookVec.z / 3;
+			fireball.setPos(fireball.getX() + lookVec.x, player.getY() + player.getEyeHeight(), fireball.getZ() + lookVec.z);
+			player.level.addFreshEntity(fireball);
 		}
 	}
 
 	@Override
 	public void onUsingTick(ItemStack stack, LivingEntity entity, int count) {
-		if (!(entity instanceof PlayerEntity)) {
+		if (!(entity instanceof Player)) {
 			return;
 		}
 		if (getMode(stack).equals(ERUPTION_MODE)) {
-			PlayerEntity player = (PlayerEntity) entity;
-			RayTraceResult rayTraceResult = player.pick(12, 1, true);
+			Player player = (Player) entity;
+			HitResult rayTraceResult = player.pick(12, 1, true);
 
-			if (rayTraceResult.getType() == RayTraceResult.Type.BLOCK) {
+			if (rayTraceResult.getType() == HitResult.Type.BLOCK) {
 				count -= 1;
 				count = getUseDuration(stack) - count;
 
-				BlockRayTraceResult blockRayTraceResult = (BlockRayTraceResult) rayTraceResult;
-				doEruptionAuxEffects(player, blockRayTraceResult.getPos().getX(), blockRayTraceResult.getPos().getY(), blockRayTraceResult.getPos().getZ());
-				if (count % 10 == 0 && removeItemFromInternalStorage(stack, Items.BLAZE_POWDER, getBlazePowderCost(), player.world.isRemote, player)) {
-					doEruptionEffect(player, blockRayTraceResult.getPos().getX(), blockRayTraceResult.getPos().getY(), blockRayTraceResult.getPos().getZ());
+				BlockHitResult blockRayTraceResult = (BlockHitResult) rayTraceResult;
+				doEruptionAuxEffects(player, blockRayTraceResult.getBlockPos().getX(), blockRayTraceResult.getBlockPos().getY(), blockRayTraceResult.getBlockPos().getZ());
+				if (count % 10 == 0 && removeItemFromInternalStorage(stack, Items.BLAZE_POWDER, getBlazePowderCost(), player.level.isClientSide, player)) {
+					doEruptionEffect(player, blockRayTraceResult.getBlockPos().getX(), blockRayTraceResult.getBlockPos().getY(), blockRayTraceResult.getBlockPos().getZ());
 				}
 			}
 		}
 	}
 
 	@Override
-	public ActionResultType onItemUse(ItemUseContext context) {
-		PlayerEntity player = context.getPlayer();
-		Direction face = context.getFace();
-		World world = context.getWorld();
+	public InteractionResult useOn(UseOnContext context) {
+		Player player = context.getPlayer();
+		Direction face = context.getClickedFace();
+		Level level = context.getLevel();
 
 		if (player == null) {
-			return ActionResultType.PASS;
+			return InteractionResult.PASS;
 		}
 
-		ItemStack stack = player.getHeldItem(context.getHand());
+		ItemStack stack = player.getItemInHand(context.getHand());
 		if (getMode(stack).equals("flint_and_steel")) {
-			BlockPos placeFireAt = context.getPos().offset(face);
-			if (!player.canPlayerEdit(placeFireAt, face, stack)) {
-				return ActionResultType.PASS;
+			BlockPos placeFireAt = context.getClickedPos().relative(face);
+			if (!player.mayUseItemAt(placeFireAt, face, stack)) {
+				return InteractionResult.PASS;
 			} else {
-				if (world.isAirBlock(placeFireAt)) {
-					world.playSound((double) placeFireAt.getX() + 0.5D, (double) placeFireAt.getY() + 0.5D, (double) placeFireAt.getZ() + 0.5D, SoundEvents.ITEM_FLINTANDSTEEL_USE, SoundCategory.BLOCKS, 1.0F, random.nextFloat() * 0.4F + 0.8F, false);
-					world.setBlockState(placeFireAt, Blocks.FIRE.getDefaultState());
+				if (level.isEmptyBlock(placeFireAt)) {
+					level.playLocalSound(placeFireAt.getX() + 0.5D, placeFireAt.getY() + 0.5D, placeFireAt.getZ() + 0.5D, SoundEvents.FLINTANDSTEEL_USE, SoundSource.BLOCKS, 1.0F, level.random.nextFloat() * 0.4F + 0.8F, false);
+					level.setBlockAndUpdate(placeFireAt, Blocks.FIRE.defaultBlockState());
 				}
-				return ActionResultType.SUCCESS;
+				return InteractionResult.SUCCESS;
 			}
 		}
-		return ActionResultType.PASS;
+		return InteractionResult.PASS;
 	}
 
-	private void doEruptionAuxEffects(PlayerEntity player, int soundX, int soundY, int soundZ) {
-		player.world.playSound((double) soundX + 0.5D, (double) soundY + 0.5D, (double) soundZ + 0.5D, SoundEvents.ENTITY_GHAST_SHOOT, SoundCategory.NEUTRAL, 0.2F, 0.03F + (0.07F * random.nextFloat()), false);
+	private void doEruptionAuxEffects(Player player, int soundX, int soundY, int soundZ) {
+		player.level.playLocalSound(soundX + 0.5D, soundY + 0.5D, soundZ + 0.5D, SoundEvents.GHAST_SHOOT, SoundSource.NEUTRAL, 0.2F, 0.03F + (0.07F * player.level.random.nextFloat()), false);
 
 		for (int particleCount = 0; particleCount < 2; ++particleCount) {
-			double randX = (soundX + 0.5D) + (player.world.rand.nextFloat() - 0.5F) * 5D;
-			double randZ = (soundZ + 0.5D) + (player.world.rand.nextFloat() - 0.5F) * 5D;
+			double randX = (soundX + 0.5D) + (player.level.random.nextFloat() - 0.5F) * 5D;
+			double randZ = (soundZ + 0.5D) + (player.level.random.nextFloat() - 0.5F) * 5D;
 			if (Math.abs(randX - (soundX + 0.5D)) < 4.0D && Math.abs(randZ - (soundZ + 0.5D)) < 4.0D) {
-				player.world.addParticle(ParticleTypes.LAVA, randX, soundY + 1D, randZ, 0D, 0D, 0D);
+				player.level.addParticle(ParticleTypes.LAVA, randX, soundY + 1D, randZ, 0D, 0D, 0D);
 			}
 		}
 		for (int particleCount = 0; particleCount < 4; ++particleCount) {
-			double randX = soundX + 0.5D + (player.world.rand.nextFloat() - 0.5F) * 5D / 2D;
-			double randZ = soundZ + 0.5D + (player.world.rand.nextFloat() - 0.5F) * 5D / 2D;
+			double randX = soundX + 0.5D + (player.level.random.nextFloat() - 0.5F) * 5D / 2D;
+			double randZ = soundZ + 0.5D + (player.level.random.nextFloat() - 0.5F) * 5D / 2D;
 			if (Math.abs(randX - (soundX + 0.5D)) < 4.0D && Math.abs(randZ - (soundZ + 0.5D)) < 4.0D) {
-				player.world.addParticle(ParticleTypes.LAVA, randX, soundY + 1D, randZ, 0D, 0D, 0D);
+				player.level.addParticle(ParticleTypes.LAVA, randX, soundY + 1D, randZ, 0D, 0D, 0D);
 			}
 		}
 		for (int particleCount = 0; particleCount < 6; ++particleCount) {
-			double randX = soundX + 0.5D + (player.world.rand.nextFloat() - 0.5F) * 5D;
-			double randZ = soundZ + 0.5D + (player.world.rand.nextFloat() - 0.5F) * 5D;
+			double randX = soundX + 0.5D + (player.level.random.nextFloat() - 0.5F) * 5D;
+			double randZ = soundZ + 0.5D + (player.level.random.nextFloat() - 0.5F) * 5D;
 			if (Math.abs(randX - (soundX + 0.5D)) < 4.0D && Math.abs(randZ - (soundZ + 0.5D)) < 4.0D) {
-				player.world.addParticle(ParticleTypes.FLAME, randX, soundY + 1D, randZ, player.world.rand.nextGaussian() * 0.2D, player.world.rand.nextGaussian() * 0.2D, player.world.rand.nextGaussian() * 0.2D);
+				player.level.addParticle(ParticleTypes.FLAME, randX, soundY + 1D, randZ, player.level.random.nextGaussian() * 0.2D, player.level.random.nextGaussian() * 0.2D, player.level.random.nextGaussian() * 0.2D);
 			}
 		}
 		for (int particleCount = 0; particleCount < 8; ++particleCount) {
-			double randX = soundX + 0.5D + (player.world.rand.nextFloat() - 0.5F) * 5D / 2D;
-			double randZ = soundZ + 0.5D + (player.world.rand.nextFloat() - 0.5F) * 5D / 2D;
+			double randX = soundX + 0.5D + (player.level.random.nextFloat() - 0.5F) * 5D / 2D;
+			double randZ = soundZ + 0.5D + (player.level.random.nextFloat() - 0.5F) * 5D / 2D;
 			if (Math.abs(randX - (soundX + 0.5D)) < 4.0D && Math.abs(randZ - (soundZ + 0.5D)) < 4.0D) {
-				player.world.addParticle(ParticleTypes.FLAME, randX, soundY + 1D, randZ, player.world.rand.nextGaussian() * 0.2D, player.world.rand.nextGaussian() * 0.2D, player.world.rand.nextGaussian() * 0.2D);
+				player.level.addParticle(ParticleTypes.FLAME, randX, soundY + 1D, randZ, player.level.random.nextGaussian() * 0.2D, player.level.random.nextGaussian() * 0.2D, player.level.random.nextGaussian() * 0.2D);
 			}
 		}
 	}
 
-	private void doEruptionEffect(PlayerEntity player, int x, int y, int z) {
+	private void doEruptionEffect(Player player, int x, int y, int z) {
 		double lowerX = x - 5D + 0.5D;
 		double lowerZ = z - 5D + 0.5D;
 		double upperX = x + 5D + 0.5D;
 		double upperY = y + 5D;
 		double upperZ = z + 5D + 0.5D;
-		List<MobEntity> entities = player.world.getEntitiesWithinAABB(MobEntity.class, new AxisAlignedBB(lowerX, y, lowerZ, upperX, upperY, upperZ));
+		List<Mob> entities = player.level.getEntitiesOfClass(Mob.class, new AABB(lowerX, y, lowerZ, upperX, upperY, upperZ));
 
-		entities.stream().filter(e -> !e.isEntityEqual(player)).forEach(e -> {
-			e.setFire(40);
-			if (!e.isImmuneToFire()) {
-				e.attackEntityFrom(DamageSource.causePlayerDamage(player), 4F);
+		entities.stream().filter(e -> !e.is(player)).forEach(e -> {
+			e.setSecondsOnFire(40);
+			if (!e.fireImmune()) {
+				e.hurt(DamageSource.playerAttack(player), 4F);
 			}
 		});
 	}
 
-	private void scanForFireChargeAndBlazePowder(ItemStack staff, PlayerEntity player) {
-		if (player.world.getGameTime() % INVENTORY_SEARCH_COOLDOWN != 0) {
+	private void scanForFireChargeAndBlazePowder(ItemStack staff, Player player) {
+		if (player.level.getGameTime() % INVENTORY_SEARCH_COOLDOWN != 0) {
 			return;
 		}
 
@@ -343,54 +342,54 @@ public class PyromancerStaffItem extends ToggleableItem implements ILeftClickabl
 		return Settings.COMMON.items.pyromancerStaff.ghastAbsorbWorth.get();
 	}
 
-	private void doExtinguishEffect(PlayerEntity player) {
-		if (player.isBurning()) {
-			player.extinguish();
+	private void doExtinguishEffect(Player player) {
+		if (player.isOnFire()) {
+			player.clearFire();
 		}
-		BlockPos.getAllInBoxMutable(player.getPosition().add(-3, -3, -3), player.getPosition().add(3, 3, 3)).forEach(pos -> {
-			Block block = player.world.getBlockState(pos).getBlock();
+		BlockPos.betweenClosed(player.blockPosition().offset(-3, -3, -3), player.blockPosition().offset(3, 3, 3)).forEach(pos -> {
+			Block block = player.level.getBlockState(pos).getBlock();
 			if (block == Blocks.FIRE) {
-				player.world.setBlockState(pos, Blocks.AIR.getDefaultState());
-				player.world.playSound(null, pos, SoundEvents.BLOCK_LAVA_EXTINGUISH, SoundCategory.BLOCKS, 0.5F, 2.6F + RandHelper.getRandomMinusOneToOne(player.world.rand) * 0.8F);
+				player.level.setBlockAndUpdate(pos, Blocks.AIR.defaultBlockState());
+				player.level.playSound(null, pos, SoundEvents.LAVA_EXTINGUISH, SoundSource.BLOCKS, 0.5F, 2.6F + RandHelper.getRandomMinusOneToOne(player.level.random) * 0.8F);
 			}
 		});
 	}
 
-	private void doFireballAbsorbEffect(ItemStack stack, PlayerEntity player) {
-		if (player.world.isRemote) {
+	private void doFireballAbsorbEffect(ItemStack stack, Player player) {
+		if (player.level.isClientSide) {
 			return;
 		}
 		absorbGhastFireballs(stack, player);
 		absorbBlazeFireballs(stack, player);
 	}
 
-	private void absorbBlazeFireballs(ItemStack stack, PlayerEntity player) {
-		List<SmallFireballEntity> blazeFireballs = player.world.getEntitiesWithinAABB(SmallFireballEntity.class, player.getBoundingBox().grow(3));
-		for (SmallFireballEntity fireball : blazeFireballs) {
-			if (fireball.func_234616_v_() == player) {
+	private void absorbBlazeFireballs(ItemStack stack, Player player) {
+		List<SmallFireball> blazeFireballs = player.level.getEntitiesOfClass(SmallFireball.class, player.getBoundingBox().inflate(3));
+		for (SmallFireball fireball : blazeFireballs) {
+			if (fireball.getOwner() == player) {
 				continue;
 			}
 			if (hasSpaceForItem(stack, Items.BLAZE_POWDER, getBlazePowderLimit())) {
 				for (int particles = 0; particles < 4; particles++) {
-					player.world.addParticle(RedstoneParticleData.REDSTONE_DUST, fireball.getPosX(), fireball.getPosY(), fireball.getPosZ(), 0.0D, 1.0D, 1.0D);
+					player.level.addParticle(DustParticleOptions.REDSTONE, fireball.getX(), fireball.getY(), fireball.getZ(), 0.0D, 1.0D, 1.0D);
 				}
-				player.world.playSound(fireball.getPosX(), fireball.getPosY(), fireball.getPosZ(), SoundEvents.BLOCK_LAVA_EXTINGUISH, SoundCategory.BLOCKS, 0.5F, 2.6F + RandHelper.getRandomMinusOneToOne(player.world.rand) * 0.8F, false);
+				player.level.playLocalSound(fireball.getX(), fireball.getY(), fireball.getZ(), SoundEvents.LAVA_EXTINGUISH, SoundSource.BLOCKS, 0.5F, 2.6F + RandHelper.getRandomMinusOneToOne(player.level.random) * 0.8F, false);
 
 				addItemToInternalStorage(stack, Items.BLAZE_POWDER, getBlazeAbsorbWorth());
 			}
-			fireball.remove();
+			fireball.discard();
 		}
 	}
 
-	private void absorbGhastFireballs(ItemStack stack, PlayerEntity player) {
-		List<FireballEntity> ghastFireballs = player.world.getEntitiesWithinAABB(FireballEntity.class, player.getBoundingBox().grow(4));
-		for (FireballEntity fireball : ghastFireballs) {
-			if (fireball.func_234616_v_() != player) {
+	private void absorbGhastFireballs(ItemStack stack, Player player) {
+		List<LargeFireball> ghastFireballs = player.level.getEntitiesOfClass(LargeFireball.class, player.getBoundingBox().inflate(4));
+		for (LargeFireball fireball : ghastFireballs) {
+			if (fireball.getOwner() != player) {
 				if (hasSpaceForItem(stack, Items.FIRE_CHARGE, getFireChargeLimit())) {
 					addItemToInternalStorage(stack, Items.FIRE_CHARGE, getGhastAbsorbWorth());
-					player.world.playSound(fireball.getPosX(), fireball.getPosY(), fireball.getPosZ(), SoundEvents.BLOCK_LAVA_EXTINGUISH, SoundCategory.BLOCKS, 0.5F, 2.6F + RandHelper.getRandomMinusOneToOne(player.world.rand) * 0.8F, false);
+					player.level.playLocalSound(fireball.getX(), fireball.getY(), fireball.getZ(), SoundEvents.LAVA_EXTINGUISH, SoundSource.BLOCKS, 0.5F, 2.6F + RandHelper.getRandomMinusOneToOne(player.level.random) * 0.8F, false);
 				}
-				fireball.remove();
+				fireball.discard();
 			}
 		}
 	}
