@@ -1,32 +1,31 @@
 package xreliquary.items;
 
-import com.google.common.collect.ImmutableMap;
-import net.minecraft.block.Block;
-import net.minecraft.block.Blocks;
-import net.minecraft.entity.Entity;
-import net.minecraft.entity.LivingEntity;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.item.BlockItem;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.ItemUseContext;
-import net.minecraft.item.Rarity;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.nbt.ListNBT;
-import net.minecraft.particles.ParticleTypes;
-import net.minecraft.util.ActionResult;
-import net.minecraft.util.ActionResultType;
-import net.minecraft.util.Direction;
-import net.minecraft.util.Hand;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.BlockRayTraceResult;
-import net.minecraft.util.math.MathHelper;
-import net.minecraft.util.math.RayTraceContext;
-import net.minecraft.util.math.RayTraceResult;
-import net.minecraft.util.math.vector.Vector3d;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.TextFormatting;
-import net.minecraft.world.World;
+import net.minecraft.ChatFormatting;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.core.particles.ParticleTypes;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.ListTag;
+import net.minecraft.network.chat.Component;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.util.Mth;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.world.InteractionResult;
+import net.minecraft.world.InteractionResultHolder;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.BlockItem;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Rarity;
+import net.minecraft.world.item.context.UseOnContext;
+import net.minecraft.world.level.ClipContext;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.phys.BlockHitResult;
+import net.minecraft.world.phys.HitResult;
+import net.minecraft.world.phys.Vec3;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
 import net.minecraftforge.items.CapabilityItemHandler;
@@ -41,6 +40,7 @@ import xreliquary.util.RegistryHelper;
 
 import javax.annotation.Nullable;
 import java.util.List;
+import java.util.Map;
 import java.util.StringJoiner;
 
 public class SojournerStaffItem extends ToggleableItem implements ILeftClickableItem {
@@ -51,7 +51,7 @@ public class SojournerStaffItem extends ToggleableItem implements ILeftClickable
 	private static final String CURRENT_INDEX_TAG = "Current";
 
 	public SojournerStaffItem() {
-		super(new Properties().maxStackSize(1));
+		super(new Properties().stacksTo(1));
 	}
 
 	@Override
@@ -60,16 +60,8 @@ public class SojournerStaffItem extends ToggleableItem implements ILeftClickable
 	}
 
 	@Override
-	public void inventoryTick(ItemStack stack, World world, Entity entity, int itemSlot, boolean isSelected) {
-		if (world.isRemote || world.getGameTime() % COOLDOWN != 0) {
-			return;
-		}
-
-		PlayerEntity player = null;
-		if (entity instanceof PlayerEntity) {
-			player = (PlayerEntity) entity;
-		}
-		if (player == null) {
+	public void inventoryTick(ItemStack stack, Level world, Entity entity, int itemSlot, boolean isSelected) {
+		if (world.isClientSide || world.getGameTime() % COOLDOWN != 0 || !(entity instanceof Player player)) {
 			return;
 		}
 
@@ -79,18 +71,18 @@ public class SojournerStaffItem extends ToggleableItem implements ILeftClickable
 	}
 
 	@Override
-	public ActionResultType onLeftClickItem(ItemStack stack, LivingEntity entityLiving) {
-		if (!entityLiving.isSneaking()) {
-			return ActionResultType.CONSUME;
+	public InteractionResult onLeftClickItem(ItemStack stack, LivingEntity entityLiving) {
+		if (!entityLiving.isShiftKeyDown()) {
+			return InteractionResult.CONSUME;
 		}
-		if (entityLiving.world.isRemote) {
-			return ActionResultType.PASS;
+		if (entityLiving.level.isClientSide) {
+			return InteractionResult.PASS;
 		}
 		cycleTorchMode(stack);
-		return ActionResultType.SUCCESS;
+		return InteractionResult.SUCCESS;
 	}
 
-	private void scanForMatchingTorchesToFillInternalStorage(ItemStack stack, PlayerEntity player) {
+	private void scanForMatchingTorchesToFillInternalStorage(ItemStack stack, Player player) {
 		for (String torch : Settings.COMMON.items.sojournerStaff.torches.get()) {
 			consumeAndCharge(player, Settings.COMMON.items.sojournerStaff.maxCapacityPerItemType.get() - getInternalStorageItemCount(stack, torch), 1, ist -> RegistryHelper.getItemRegistryName(ist.getItem()).equals(torch), 16,
 					chargeToAdd -> addItemToInternalStorage(stack, torch, chargeToAdd));
@@ -105,16 +97,16 @@ public class SojournerStaffItem extends ToggleableItem implements ILeftClickable
 		return getCurrentTorchTag(stack).getInt(QUANTITY_TAG);
 	}
 
-	private CompoundNBT getCurrentTorchTag(ItemStack stack) {
-		CompoundNBT tagCompound = NBTHelper.getTag(stack);
+	private CompoundTag getCurrentTorchTag(ItemStack stack) {
+		CompoundTag tagCompound = NBTHelper.getTag(stack);
 
-		ListNBT tagList = getItemListTag(tagCompound);
+		ListTag tagList = getItemListTag(tagCompound);
 		int current = getCurrentIndex(tagCompound, tagList);
 
 		return tagList.getCompound(current);
 	}
 
-	private ListNBT getItemListTag(CompoundNBT tagCompound) {
+	private ListTag getItemListTag(CompoundTag tagCompound) {
 		return tagCompound.getList(ITEMS_TAG, 10);
 	}
 
@@ -123,8 +115,8 @@ public class SojournerStaffItem extends ToggleableItem implements ILeftClickable
 		if (currentTorch.isEmpty()) {
 			return;
 		}
-		CompoundNBT tagCompound = NBTHelper.getTag(stack);
-		ListNBT tagList = getItemListTag(tagCompound);
+		CompoundTag tagCompound = NBTHelper.getTag(stack);
+		ListTag tagList = getItemListTag(tagCompound);
 		if (tagList.size() == 1) {
 			return;
 		}
@@ -132,7 +124,7 @@ public class SojournerStaffItem extends ToggleableItem implements ILeftClickable
 		int current = getCurrentIndex(tagCompound, tagList);
 
 		for (int i = current + 1; i < tagList.size(); i++) {
-			CompoundNBT tagItemData = tagList.getCompound(i);
+			CompoundTag tagItemData = tagList.getCompound(i);
 			int quantity = tagItemData.getInt(QUANTITY_TAG);
 			if (quantity > 0) {
 				tagCompound.putInt(CURRENT_INDEX_TAG, i);
@@ -140,7 +132,7 @@ public class SojournerStaffItem extends ToggleableItem implements ILeftClickable
 			}
 		}
 		for (int i = 0; i <= current; i++) {
-			CompoundNBT tagItemData = tagList.getCompound(i);
+			CompoundTag tagItemData = tagList.getCompound(i);
 			int quantity = tagItemData.getInt(QUANTITY_TAG);
 			if (quantity > 0) {
 				tagCompound.putInt(CURRENT_INDEX_TAG, i);
@@ -149,7 +141,7 @@ public class SojournerStaffItem extends ToggleableItem implements ILeftClickable
 		}
 	}
 
-	private int getCurrentIndex(CompoundNBT tagCompound, ListNBT tagList) {
+	private int getCurrentIndex(CompoundTag tagCompound, ListTag tagList) {
 		int current = tagCompound.getInt(CURRENT_INDEX_TAG);
 		if (tagList.size() <= current) {
 			tagCompound.putInt(CURRENT_INDEX_TAG, 0);
@@ -159,18 +151,18 @@ public class SojournerStaffItem extends ToggleableItem implements ILeftClickable
 
 	@Override
 	@OnlyIn(Dist.CLIENT)
-	protected void addMoreInformation(ItemStack staff, @Nullable World world, List<ITextComponent> tooltip) {
+	protected void addMoreInformation(ItemStack staff, @Nullable Level world, List<Component> tooltip) {
 		StringJoiner joiner = new StringJoiner(";");
 		iterateItems(staff, tag -> {
 			ItemStack containedItem = getItem(tag);
 			int quantity = tag.getInt(QUANTITY_TAG);
-			joiner.add(containedItem.getDisplayName().getString() + ": " + quantity);
+			joiner.add(containedItem.getHoverName().getString() + ": " + quantity);
 		}, () -> false);
 
-		LanguageHelper.formatTooltip(getTranslationKey() + ".tooltip2", ImmutableMap.of("phrase", joiner.toString(), "placing", getCurrentTorch(staff).getDisplayName().getString()), tooltip);
+		LanguageHelper.formatTooltip(getDescriptionId() + ".tooltip2", Map.of("phrase", joiner.toString(), "placing", getCurrentTorch(staff).getHoverName().getString()), tooltip);
 
 		if (isEnabled(staff)) {
-			LanguageHelper.formatTooltip("tooltip.absorb_active", ImmutableMap.of("item", TextFormatting.YELLOW + (new ItemStack(Blocks.TORCH).getDisplayName().getString())), tooltip);
+			LanguageHelper.formatTooltip("tooltip.absorb_active", Map.of("item", ChatFormatting.YELLOW + (new ItemStack(Blocks.TORCH).getHoverName().getString())), tooltip);
 		}
 		LanguageHelper.formatTooltip("tooltip.absorb", tooltip);
 	}
@@ -180,51 +172,51 @@ public class SojournerStaffItem extends ToggleableItem implements ILeftClickable
 		return true;
 	}
 
-	private static ItemStack getItem(CompoundNBT tagItemData) {
+	private static ItemStack getItem(CompoundTag tagItemData) {
 		return new ItemStack(ForgeRegistries.ITEMS.getValue(new ResourceLocation(tagItemData.getString(ITEM_NAME_TAG))));
 	}
 
 	@Override
-	public ActionResultType onItemUse(ItemUseContext context) {
+	public InteractionResult useOn(UseOnContext context) {
 		return placeTorch(context);
 	}
 
-	private ActionResultType placeTorch(ItemUseContext context) {
-		PlayerEntity player = context.getPlayer();
-		Hand hand = context.getHand();
-		World world = context.getWorld();
-		BlockPos pos = context.getPos();
-		Direction face = context.getFace();
-		ItemStack stack = context.getItem();
+	private InteractionResult placeTorch(UseOnContext context) {
+		Player player = context.getPlayer();
+		InteractionHand hand = context.getHand();
+		Level world = context.getLevel();
+		BlockPos pos = context.getClickedPos();
+		Direction face = context.getClickedFace();
+		ItemStack stack = context.getItemInHand();
 
-		BlockPos placeBlockAt = pos.offset(face);
+		BlockPos placeBlockAt = pos.relative(face);
 
-		if (world.isRemote) {
-			return ActionResultType.SUCCESS;
+		if (world.isClientSide) {
+			return InteractionResult.SUCCESS;
 		}
 		ItemStack torch = getCurrentTorch(stack);
 		if (player == null || torch.isEmpty() || !(torch.getItem() instanceof BlockItem)) {
-			return ActionResultType.FAIL;
+			return InteractionResult.FAIL;
 		}
-		if (!player.canPlayerEdit(placeBlockAt, face, stack) || player.isCrouching()) {
-			return ActionResultType.PASS;
+		if (!player.mayUseItemAt(placeBlockAt, face, stack) || player.isCrouching()) {
+			return InteractionResult.PASS;
 		}
-		player.swingArm(hand);
+		player.swing(hand);
 
 		Block blockToPlace = ((BlockItem) torch.getItem()).getBlock();
 		NoPlayerBlockItemUseContext placeContext = new NoPlayerBlockItemUseContext(world, placeBlockAt, new ItemStack(blockToPlace), face);
 		if (!placeContext.canPlace() || !removeTorches(player, stack, blockToPlace, placeBlockAt)) {
-			return ActionResultType.FAIL;
+			return InteractionResult.FAIL;
 		}
-		((BlockItem) torch.getItem()).tryPlace(placeContext);
-		double gauss = 0.5D + world.rand.nextFloat() / 2;
+		((BlockItem) torch.getItem()).place(placeContext);
+		double gauss = 0.5D + world.random.nextFloat() / 2;
 		world.addParticle(ParticleTypes.ENTITY_EFFECT, placeBlockAt.getX() + 0.5D, placeBlockAt.getY() + 0.5D, placeBlockAt.getZ() + 0.5D, gauss, gauss, 0.0F);
-		return ActionResultType.SUCCESS;
+		return InteractionResult.SUCCESS;
 	}
 
-	private boolean removeTorches(PlayerEntity player, ItemStack stack, Block blockToPlace, BlockPos placeBlockAt) {
+	private boolean removeTorches(Player player, ItemStack stack, Block blockToPlace, BlockPos placeBlockAt) {
 		if (!player.isCreative()) {
-			int distance = (int) player.getEyePosition(1).distanceTo(new Vector3d(placeBlockAt.getX(), placeBlockAt.getY(), placeBlockAt.getZ()));
+			int distance = (int) player.getEyePosition(1).distanceTo(new Vec3(placeBlockAt.getX(), placeBlockAt.getY(), placeBlockAt.getZ()));
 			int cost = 1 + distance / Settings.COMMON.items.sojournerStaff.tilePerCostMultiplier.get();
 
 			return removeItemFromInternalStorage(stack, blockToPlace, cost, false, player);
@@ -233,14 +225,14 @@ public class SojournerStaffItem extends ToggleableItem implements ILeftClickable
 	}
 
 	@Override
-	public ActionResult<ItemStack> onItemRightClick(World world, PlayerEntity player, Hand hand) {
-		if (!player.isSneaking()) {
-			RayTraceResult rayTraceResult = longRayTrace(world, player);
-			if (rayTraceResult.getType() == RayTraceResult.Type.BLOCK) {
-				placeTorch(new ItemUseContext(player, hand, (BlockRayTraceResult) rayTraceResult));
+	public InteractionResultHolder<ItemStack> use(Level world, Player player, InteractionHand hand) {
+		if (!player.isShiftKeyDown()) {
+			HitResult rayTraceResult = longRayTrace(world, player);
+			if (rayTraceResult.getType() == HitResult.Type.BLOCK) {
+				placeTorch(new UseOnContext(player, hand, (BlockHitResult) rayTraceResult));
 			} else {
-				ItemStack staff = player.getHeldItem(hand);
-				CompoundNBT torchTag = getCurrentTorchTag(staff);
+				ItemStack staff = player.getItemInHand(hand);
+				CompoundTag torchTag = getCurrentTorchTag(staff);
 				ItemStack torch = getItem(torchTag);
 				int count = torchTag.getInt(QUANTITY_TAG);
 				torch.setCount(Math.min(count, torch.getMaxStackSize()));
@@ -250,21 +242,21 @@ public class SojournerStaffItem extends ToggleableItem implements ILeftClickable
 				});
 			}
 		}
-		return super.onItemRightClick(world, player, hand);
+		return super.use(world, player, hand);
 	}
 
-	private RayTraceResult longRayTrace(World worldIn, PlayerEntity player) {
-		float f = player.rotationPitch;
-		float f1 = player.rotationYaw;
-		Vector3d vec3d = player.getEyePosition(1.0F);
-		float f2 = MathHelper.cos(-f1 * ((float) Math.PI / 180F) - (float) Math.PI);
-		float f3 = MathHelper.sin(-f1 * ((float) Math.PI / 180F) - (float) Math.PI);
-		float f4 = -MathHelper.cos(-f * ((float) Math.PI / 180F));
-		float f5 = MathHelper.sin(-f * ((float) Math.PI / 180F));
+	private HitResult longRayTrace(Level worldIn, Player player) {
+		float f = player.getXRot();
+		float f1 = player.getYRot();
+		Vec3 vec3d = player.getEyePosition(1.0F);
+		float f2 = Mth.cos(-f1 * ((float) Math.PI / 180F) - (float) Math.PI);
+		float f3 = Mth.sin(-f1 * ((float) Math.PI / 180F) - (float) Math.PI);
+		float f4 = -Mth.cos(-f * ((float) Math.PI / 180F));
+		float f5 = Mth.sin(-f * ((float) Math.PI / 180F));
 		float f6 = f3 * f4;
 		float f7 = f2 * f4;
 		double d0 = Settings.COMMON.items.sojournerStaff.maxRange.get();
-		Vector3d vec3d1 = vec3d.add((double) f6 * d0, (double) f5 * d0, (double) f7 * d0);
-		return worldIn.rayTraceBlocks(new RayTraceContext(vec3d, vec3d1, RayTraceContext.BlockMode.OUTLINE, RayTraceContext.FluidMode.ANY, player));
+		Vec3 vec3d1 = vec3d.add(f6 * d0, f5 * d0, f7 * d0);
+		return worldIn.clip(new ClipContext(vec3d, vec3d1, ClipContext.Block.OUTLINE, ClipContext.Fluid.ANY, player));
 	}
 }
